--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,4 @@
-== README
+== WoW Simcraft Web Interface
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This is a basic implementation of a Simcraft web interface. It runs on rails and node.js.
+To run this you need to setup your own simcraft cli so that you'll have the latest version.
